# chat

./: .env  Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml  test.rest
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/src/: lib.rs  models.rs
chat_core/src/middlewares/: auth.rs  mod.rs  request_id.rs
chat_core/src/utils/: jwt.rs
chat_server/: Cargo.toml  config.yml  test.rest
chat_server/fixtures/: test.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs  router.rs  server.rs  state.rs
chat_server/src/handlers/: auth.rs  chat.rs  message.rs  mod.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs  server_time.rs
chat_server/src/models/: chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: extractor.rs  jwt.rs
chat_test/: Cargo.toml
chat_test/tests/: chat.rs
migrations/: 20240608021232_initial.sql  20240613103841_workspace.sql  20240622002650_triggers.sql
notify_server/: Cargo.toml  index.html  notify.yml
notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notify.rs  sse.rs
notify_server/static/: index.html
sql/: init.sql
src/: config.rs  main.rs
src/handlers/: auth.rs  chat.rs  mod.rs
