[package]
name = "chat-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.8.0", features = ["v7", "serde"] }
futures-util = "0.3.30"
jwt-simple = { version = "0.12.9", default-features = false, features = [
    "pure-rust",
] }
[dev-dependencies]
http-body-util = "0.1.1"
