[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.7.5", features = [
    "http2",
    "query",
    "tracing",
    "multipart",
] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-macros = "0.4.1"
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.0"
futures-util = "0.3.30"
hex = "0.4.3"
jwt-simple = { version = "0.12.9", default-features = false, features = [
    "pure-rust",
] }
mime_guess = "2.0.4"
serde = { workspace = true }
serde_json = "1.0.117"
serde_yaml = { workspace = true }
sha1 = "0.10.6"
sqlx = { workspace = true }
sqlx-db-tester = "0.4.2"
thiserror = { workspace = true }
tokio = { workspace = true }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["compression-full", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.8.0", features = ["v7", "serde"] }

[dev-dependencies]
http-body-util = "0.1.1"
