[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chat-core = { workspace = true }
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
axum-extra = { workspace = true }
axum-macros = "0.4.1"
config = { workspace = true }
mime_guess = "2.0.4"
serde = { workspace = true }
serde_json = { workspace = true }
hex = "0.4.3"
sha1 = "0.10.6"
sqlx = { workspace = true }
sqlx-db-tester = "0.4.2"
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


[dev-dependencies]
http-body-util = "0.1.1"
