[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
test-util = ["http-body-util", "sqlx-db-tester"]

[dependencies]
chat-core = { workspace = true }
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
axum-extra = { workspace = true }
axum-macros = "0.4.1"
config = { workspace = true }
mime_guess = "2.0.4"
serde = { workspace = true }
serde_json = { workspace = true }
hex = "0.4.3"
sha1 = "0.10.6"
sqlx = { workspace = true }
sqlx-db-tester = { version = "0.4.2", optional = true }
http-body-util = { version = "0.1.1", optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.1.0", features = ["axum"] }


[dev-dependencies]
chat-server = { workspace = true, features = ["test-util"] }
